force-app/main/default/objects/Journal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journals</relationshipLabel>
    <relationshipName>Journals</relationshipName>
    <type>Lookup</type>
</CustomField>