force-app/main/default/objects/Journal__c/fields/Account_Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Account_Phone_Formatted__c</fullName>
    <formula>IF( BEGINS(Account__r.Phone , &apos;+45&apos; ) , Account__r.Phone ,
IF( BEGINS(Account__r.Phone , &apos;45&apos; ) , &apos;+&apos; + Account__r.Phone ,
IF( AND( NOT(BEGINS(Account__r.Phone , &apos;+45&apos; )) , OR( ISPICKVAL( Market_Unit__c , &apos;DFJ_DK&apos;) , ISPICKVAL( Market_Unit__c , &apos;Testamente_DK&apos;))) , &apos;+45&apos; + Account__r.Phone ,
IF( AND( NOT(BEGINS(Account__r.Phone , &apos;+&apos; )) , OR( ISPICKVAL( Market_Unit__c , &apos;DFJ_DK&apos;) , ISPICKVAL( Market_Unit__c , &apos;Testamente_DK&apos;))) , &apos;+&apos; + Account__r.Phone ,
IF( BEGINS(Account__r.Phone , &apos;+46&apos; ) , Account__r.Phone ,
IF( BEGINS(Account__r.Phone , &apos;46&apos; ) , &apos;+&apos; + Account__r.Phone ,
IF( AND( NOT(BEGINS(Account__r.Phone , &apos;+46&apos; )) , ISPICKVAL( Market_Unit__c , &apos;FA_SE&apos;)) , &apos;+46&apos; + Account__r.Phone ,
IF( AND( NOT(BEGINS(Account__r.Phone , &apos;+&apos; )) , ISPICKVAL( Market_Unit__c , &apos;FA_SE&apos;)) , &apos;+46&apos; + Account__r.Phone , Account__r.Phone ))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Phone Formatted</label>
    <type>Text</type>
</CustomField>