force-app/main/default/objects/Journal__c/fields/After_work_hours__c.field-meta.xml
<CustomField>
    <fullName>After_work_hours__c</fullName>
    <label>After work hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In working hours</fullName>
                <default>true</default>
                <label>In working hours</label>
            </value>
            <value>
                <fullName>After work hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>