force-app/main/default/objects/Journal__c/fields/After_work_hours_date__c.field-meta.xml
<CustomField>
    <fullName>After_work_hours_date__c</fullName>
    <label>After work hours date</label>
    <type>DateTime</type>
</CustomField>