force-app/main/default/objects/Journal__c/fields/All_Shared_Documents_Approved__c.field-meta.xml
<CustomField>
    <fullName>All_Shared_Documents_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controlled by a flow that checks Shared Documents with &quot;Is Newest Version&quot;. If all of them are Approved, this field is set.</description>
    <label>All Shared Documents Approved</label>
    <type>Checkbox</type>
</CustomField>