force-app/main/default/objects/Journal__c/fields/Allow_Guardian_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guardian_Amount__c</fullName>
    <label>Skal værgen have adgang til et beløb?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toggle_Guardian_monthly_amount__c</fullName>
                <label>Månedligt pr. Barn</label>
            </value>
            <value>
                <fullName>Toggle_Guardian_one_time_fee__c</fullName>
                <label>Engangsbeløb til værgen</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>