force-app/main/default/objects/Journal__c/fields/Archived_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Archived_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archived Email Sent</label>
    <type>Checkbox</type>
</CustomField>