force-app/main/default/objects/Journal__c/fields/archived_sms_sent__c.field-meta.xml
<CustomField>
    <fullName>archived_sms_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is ticked and the Journal State is set to &quot;Arkiveret (Intet svar)&quot;, the customer will receive an email regarding us stopping trying to reach them.</description>
    <label>Archived SMS Sent</label>
    <type>Checkbox</type>
</CustomField>