force-app/main/default/objects/Journal__c/fields/Arv_fra_l_ngstlevende__c.field-meta.xml
<CustomField>
    <fullName>Arv_fra_l_ngstlevende__c</fullName>
    <label>Arv fra længstlevende</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ligedeling **</fullName>
            </value>
            <value>
                <fullName>Arv efter gren **</fullName>
            </value>
            <value>
                <fullName>Procentfordeling **</fullName>
            </value>
            <value>
                <fullName>Sort får</fullName>
            </value>
            <value>
                <fullName>Hvidt lam</fullName>
            </value>
            <value>
                <fullName>Børnebørn</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
            <value>
                <fullName>30 pct løsning</fullName>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>