force-app/main/default/objects/Journal__c/fields/Automatically_Archived__c.field-meta.xml
<CustomField>
    <fullName>Automatically_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatically Archived</label>
    <type>Checkbox</type>
</CustomField>