force-app/main/default/objects/Journal__c/fields/Awaiting_agent_since__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_agent_since__c</fullName>
    <label>Awaiting agent since</label>
    <type>DateTime</type>
</CustomField>