force-app/main/default/objects/Journal__c/fields/Awaiting_customer_since__c.field-meta.xml
<CustomField>
    <fullName>Awaiting_customer_since__c</fullName>
    <label>Awaiting customer since</label>
    <type>DateTime</type>
</CustomField>