force-app/main/default/objects/Journal__c/fields/Chat_Notification_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Chat_Notification_Timeout__c</fullName>
    <label>Chat Notification Timeout</label>
    <type>DateTime</type>
</CustomField>