force-app/main/default/objects/Journal__c/fields/Children_type__c.field-meta.xml
<CustomField>
    <fullName>Children_type__c</fullName>
    <label>Children type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
                <label>Fælles</label>
            </value>
            <value>
                <fullName>Blended</fullName>
                <label>Sammenbragte</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>