force-app/main/default/objects/Journal__c/fields/Civil_Status__c.field-meta.xml
<CustomField>
    <fullName>Civil_Status__c</fullName>
    <label>Civil Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
                <label>Gift</label>
            </value>
            <value>
                <fullName>Cohabiting</fullName>
                <label>Samlevende</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>