force-app/main/default/objects/Journal__c/fields/Clear_Awaiting_X_Since_Value__c.field-meta.xml
<CustomField>
    <fullName>Clear_Awaiting_X_Since_Value__c</fullName>
    <label>Clear Awaiting X Since Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clear Awaiting Customer Since</fullName>
            </value>
            <value>
                <fullName>Clear Awaiting Agent Since</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>