force-app/main/default/objects/Journal__c/fields/Common_Property__c.field-meta.xml
<CustomField>
    <fullName>Common_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Property</label>
    <type>Checkbox</type>
</CustomField>