force-app/main/default/objects/Journal__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Completed_Journals</relationshipName>
    <type>Lookup</type>
</CustomField>