force-app/main/default/objects/Journal__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>