force-app/main/default/objects/Journal__c/fields/Contains_Custom_Documents__c.field-meta.xml
<CustomField>
    <fullName>Contains_Custom_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Custom Documents</label>
    <type>Checkbox</type>
</CustomField>