force-app/main/default/objects/Journal__c/fields/Created_date_time_journal__c.field-meta.xml
<CustomField>
    <fullName>Created_date_time_journal__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created date time journal</label>
    <type>DateTime</type>
</CustomField>