force-app/main/default/objects/Journal__c/fields/Custom_Document_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Custom_Document_Booking_Status__c</fullName>
    <label>Custom Document Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting booking</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>