force-app/main/default/objects/Journal__c/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <label>CVR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>