force-app/main/default/objects/Journal__c/fields/Date_of_Cohabiting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cohabiting__c</fullName>
    <label>Date of Cohabiting</label>
    <type>Date</type>
</CustomField>