force-app/main/default/objects/Journal__c/fields/Days_Since_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Completion__c</fullName>
    <formula>IF(
    DATEVALUE(Completed_Date__c) &gt; TODAY(),
    NULL,
    TODAY() - DATEVALUE(Completed_Date__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>