force-app/main/default/objects/Journal__c/fields/Deadline_overdue__c.field-meta.xml
<CustomField>
    <fullName>Deadline_overdue__c</fullName>
    <formula>journal_Deadline__c  &lt;  (NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline overdue</label>
    <type>Checkbox</type>
</CustomField>