force-app/main/default/objects/Journal__c/fields/Deadline_overdue_days__c.field-meta.xml
<CustomField>
    <fullName>Deadline_overdue_days__c</fullName>
    <formula>IF(  Deadline_overdue__c  = True ,  (journal_Deadline__c - NOW())+0,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deadline overdue days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>