force-app/main/default/objects/Journal__c/fields/Disable_Document_Review_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Disable_Document_Review_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Document Review Notifications</label>
    <type>Checkbox</type>
</CustomField>