force-app/main/default/objects/Journal__c/fields/DocFab_Record_Model_ID__c.field-meta.xml
<CustomField>
    <fullName>DocFab_Record_Model_ID__c</fullName>
    <label>DocFab Record Model ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>