force-app/main/default/objects/Journal__c/fields/Document_Share_CC_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Document_Share_CC_Recipients__c</fullName>
    <label>Document Share CC Recipients</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>