force-app/main/default/objects/Journal__c/fields/Document_Signed__c.field-meta.xml
<CustomField>
    <fullName>Document_Signed__c</fullName>
    <label>Document Signed</label>
    <type>DateTime</type>
</CustomField>