force-app/main/default/objects/Journal__c/fields/Economical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Economical_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Economical Conditions</label>
    <type>Checkbox</type>
</CustomField>