force-app/main/default/objects/Journal__c/fields/escrow_age__c.field-meta.xml
<CustomField>
    <fullName>escrow_age__c</fullName>
    <label>Båndlæggelse af arv fra alder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>