force-app/main/default/objects/Journal__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <label>EventID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>