force-app/main/default/objects/Journal__c/fields/External_record_uuid__c.field-meta.xml
<CustomField>
    <fullName>External_record_uuid__c</fullName>
    <label>External record uuid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>