force-app/main/default/objects/Journal__c/fields/Fejls_gning_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Fejls_gning_Calendly__c</fullName>
    <description>Bruges til at finde ud af hvilke flows der sender forkert data ind</description>
    <label>Fejlsøgning (Calendly)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>