force-app/main/default/objects/Journal__c/fields/Finalization_Email_Error__c.field-meta.xml
<CustomField>
    <fullName>Finalization_Email_Error__c</fullName>
    <label>Finalization Email Error</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Missing Order</fullName>
            </value>
            <value>
                <fullName>Missing Journal</fullName>
            </value>
            <value>
                <fullName>Missing Order Products Requiring Finalization Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>