force-app/main/default/objects/Journal__c/fields/Finalization_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Finalization_Emails_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalization Emails Sent</label>
    <type>Checkbox</type>
</CustomField>