force-app/main/default/objects/Journal__c/fields/First_Draft_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>First_Draft_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Draft Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journals3</relationshipName>
    <type>Lookup</type>
</CustomField>