force-app/main/default/objects/Journal__c/fields/First_GetAccept_Document__c.field-meta.xml
<CustomField>
    <fullName>First_GetAccept_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First GetAccept Document</label>
    <referenceTo>GetAccept__GetAccept_Document__c</referenceTo>
    <relationshipLabel>Journals</relationshipLabel>
    <relationshipName>Journals</relationshipName>
    <type>Lookup</type>
</CustomField>