force-app/main/default/objects/Journal__c/fields/former_wills__c.field-meta.xml
<CustomField>
    <fullName>former_wills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>former wills</label>
    <type>Checkbox</type>
</CustomField>