force-app/main/default/objects/Journal__c/fields/GA_All_Comments__c.field-meta.xml
<CustomField>
    <fullName>GA_All_Comments__c</fullName>
    <label>GA - All Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>