force-app/main/default/objects/Journal__c/fields/GA_Comments_Separated__c.field-meta.xml
<CustomField>
    <fullName>GA_Comments_Separated__c</fullName>
    <label>GA - Separated Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>