force-app/main/default/objects/Journal__c/fields/GA_Document_Link__c.field-meta.xml
<CustomField>
    <fullName>GA_Document_Link__c</fullName>
    <label>GetAccept Link</label>
    <type>Url</type>
</CustomField>