force-app/main/default/objects/Journal__c/fields/GA_Number_of_Comments__c.field-meta.xml
<CustomField>
    <fullName>GA_Number_of_Comments__c</fullName>
    <label>GA - Number of Comments</label>
    <length>10</length>
    <type>Text</type>
</CustomField>