force-app/main/default/objects/Journal__c/fields/GA_Reply_Status__c.field-meta.xml
<CustomField>
    <fullName>GA_Reply_Status__c</fullName>
    <label>GA - Reply Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting agent</fullName>
            </value>
            <value>
                <fullName>Awaiting customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>