force-app/main/default/objects/Journal__c/fields/GA_Status__c.field-meta.xml
<CustomField>
    <fullName>GA_Status__c</fullName>
    <label>GA - Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>