force-app/main/default/objects/Journal__c/fields/Google_Drive_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Folder_ID__c</fullName>
    <label>Google Drive Folder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>