force-app/main/default/objects/Journal__c/fields/Google_Drive_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Drive_Search__c</fullName>
    <formula>&quot;https://drive.google.com/drive/u/0/search?q=&quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Drive Search</label>
    <type>Text</type>
</CustomField>